--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.7",
+    "@apollo/experimental-nextjs-app-support": "^0.5.1",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
@@ -18,8 +20,12 @@
     "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.5",
+    "graphql": "^16.8.1",
+    "graphql-ws": "^5.14.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
@@ -35,6 +41,6 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.3.2"
   }
 }
