--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,6 +1,8 @@
 actions: []
 custom_types:
   enums: []
-  input_objects: []
-  objects: []
+  input_objects:
+    - name: SetPasswordInput
+  objects:
+    - name: SetPasswordOutput
   scalars: []
