--- a/hasura/metadata/databases/default/tables/public_roles.yaml
+++ b/hasura/metadata/databases/default/tables/public_roles.yaml
@@ -11,3 +11,13 @@ array_relationships:
         remote_table:
           name: users
           schema: public
+select_permissions:
+  - role: clerk
+    permission:
+      columns:
+        - name
+        - created_at
+        - updated_at
+        - id
+      filter: {}
+    comment: ""
