--- a/hasura/metadata/databases/default/tables/public_gas_stations.yaml
+++ b/hasura/metadata/databases/default/tables/public_gas_stations.yaml
@@ -1,3 +1,14 @@
 table:
   name: gas_stations
   schema: public
+select_permissions:
+  - role: clerk
+    permission:
+      columns:
+        - address
+        - name
+        - created_at
+        - updated_at
+        - id
+      filter: {}
+    comment: ""
