--- a/hasura/metadata/databases/default/tables/public_gas_types.yaml
+++ b/hasura/metadata/databases/default/tables/public_gas_types.yaml
@@ -11,3 +11,14 @@ array_relationships:
         remote_table:
           name: gas_tanks
           schema: public
+select_permissions:
+  - role: clerk
+    permission:
+      columns:
+        - price
+        - name
+        - created_at
+        - updated_at
+        - id
+      filter: {}
+    comment: ""
