--- a/hasura/metadata/databases/default/tables/public_gas_tanks.yaml
+++ b/hasura/metadata/databases/default/tables/public_gas_tanks.yaml
@@ -25,11 +25,12 @@ select_permissions:
   - role: clerk
     permission:
       columns:
-        - volume
-        - name
         - created_at
-        - updated_at
         - gas_type_id
         - id
+        - max_volume
+        - name
+        - updated_at
+        - volume
       filter: {}
     comment: ""
