--- a/hasura/metadata/databases/default/tables/public_gas_types.yaml
+++ b/hasura/metadata/databases/default/tables/public_gas_types.yaml
@@ -22,3 +22,10 @@ select_permissions:
         - id
       filter: {}
     comment: ""
+  - role: user
+    permission:
+      columns:
+        - name
+        - price
+      filter: {}
+    comment: ""
