--- a/hasura/metadata/databases/default/tables/public_gas_tanks.yaml
+++ b/hasura/metadata/databases/default/tables/public_gas_tanks.yaml
@@ -34,3 +34,9 @@ select_permissions:
         - volume
       filter: {}
     comment: ""
+  - role: user
+    permission:
+      columns:
+        - gas_type_id
+      filter: {}
+    comment: ""
